// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchWallet uses fiat value = false should render 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="flex overflow-hidden absolute right-0 left-0 z-50 flex-col p-10 mx-auto rounded-xl shadow-2xl Modal__ModalContainer-sc-1pv7yg7-0 NWPmM bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="w-11 h-11 Button__StyledButton-mdtvtf-0 fHYGyx"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Select Account
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            Find and select the account you want to receive funds to
          </div>
          <div
            class="mt-8"
          >
            <div
              class="-mt-3 Table__TableWrapper-sc-84pst5-0 ccYCKK"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                    role="row"
                  >
                    <th
                      class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 hasBorder "
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex align-top flex-inline "
                      >
                        <div>
                          Wallet Address
                        </div>
                        <div
                          class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          <div
                            class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 hasBorder "
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-row-reverse justify-end align-top flex-inline"
                      >
                        <div>
                          Balance
                        </div>
                        <div
                          class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          <div
                            class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 "
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-row-reverse justify-end align-top flex-inline no-border"
                      >
                        <div>
                          <div
                            class="relative"
                          >
                            <button
                              class="my-auto h-full font-semibold cursor-pointer focus:outline-none"
                              data-testid="header-search-bar__button"
                            >
                              <div
                                class="flex items-center space-x-3"
                              >
                                <span
                                  class="text-theme-primary-300 dark:text-theme-secondary-700"
                                >
                                  Search
                                </span>
                                <div
                                  class="sc-bdfBwQ iNulIV text-theme-primary-300 dark:text-theme-secondary-600"
                                  height="18"
                                  width="18"
                                >
                                  <svg>
                                    search.svg
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="space-x-4 TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 gMOims"
                      >
                        <div
                          class="-space-x-2"
                        >
                          <div
                            aria-label="ARK Devnet"
                            class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
                            data-testid="NetworkIcon-ARK-ark.devnet"
                          >
                            <div
                              class="sc-bdfBwQ iyevwF"
                              data-testid="NetworkIcon__icon"
                              height="20"
                              width="20"
                            >
                              <svg>
                                ark.svg
                              </svg>
                            </div>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="flex-auto mr-2 text-base font-semibold max-w-24 truncate text-theme-text"
                            data-testid="address__wallet-name"
                          >
                            <span
                              class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                              data-testid="TruncateEnd"
                            >
                              Sample Wallet
                            </span>
                          </span>
                          <span
                            class="text-base font-semibold TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate"
                            data-testid="address__wallet-address"
                          >
                            D8rr7B…s6YUYD
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="justify-end font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
                      >
                        <span
                          data-testid="Amount"
                        >
                          33.75089801 DARK
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 cnmhFM"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="SearchWalletListItem__select-0"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="space-x-4 TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 gMOims"
                      >
                        <div
                          class="-space-x-2"
                        >
                          <div
                            aria-label="ARK Devnet"
                            class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
                            data-testid="NetworkIcon-ARK-ark.devnet"
                          >
                            <div
                              class="sc-bdfBwQ iyevwF"
                              data-testid="NetworkIcon__icon"
                              height="20"
                              width="20"
                            >
                              <svg>
                                ark.svg
                              </svg>
                            </div>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                                title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="flex-auto mr-2 text-base font-semibold max-w-24 truncate text-theme-text"
                            data-testid="address__wallet-name"
                          >
                            <span
                              class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                              data-testid="TruncateEnd"
                            >
                              ARK Wallet 2
                            </span>
                          </span>
                          <span
                            class="text-base font-semibold TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate"
                            data-testid="address__wallet-address"
                          >
                            D5sRKW…cvJtwb
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="justify-end font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
                      >
                        <span
                          data-testid="Amount"
                        >
                          57.68 DARK
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 cnmhFM"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="SearchWalletListItem__select-1"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchWallet uses fiat value = false should render with BTC as the default exchange currency 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="flex overflow-hidden absolute right-0 left-0 z-50 flex-col p-10 mx-auto rounded-xl shadow-2xl Modal__ModalContainer-sc-1pv7yg7-0 NWPmM bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="w-11 h-11 Button__StyledButton-mdtvtf-0 fHYGyx"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Select Account
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            Find and select the account you want to receive funds to
          </div>
          <div
            class="mt-8"
          >
            <div
              class="-mt-3 Table__TableWrapper-sc-84pst5-0 ccYCKK"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                    role="row"
                  >
                    <th
                      class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 hasBorder "
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex align-top flex-inline "
                      >
                        <div>
                          Wallet Address
                        </div>
                        <div
                          class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          <div
                            class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 hasBorder "
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-row-reverse justify-end align-top flex-inline"
                      >
                        <div>
                          Balance
                        </div>
                        <div
                          class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          <div
                            class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 "
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-row-reverse justify-end align-top flex-inline no-border"
                      >
                        <div>
                          <div
                            class="relative"
                          >
                            <button
                              class="my-auto h-full font-semibold cursor-pointer focus:outline-none"
                              data-testid="header-search-bar__button"
                            >
                              <div
                                class="flex items-center space-x-3"
                              >
                                <span
                                  class="text-theme-primary-300 dark:text-theme-secondary-700"
                                >
                                  Search
                                </span>
                                <div
                                  class="sc-bdfBwQ iNulIV text-theme-primary-300 dark:text-theme-secondary-600"
                                  height="18"
                                  width="18"
                                >
                                  <svg>
                                    search.svg
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="space-x-4 TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 gMOims"
                      >
                        <div
                          class="-space-x-2"
                        >
                          <div
                            aria-label="ARK Devnet"
                            class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
                            data-testid="NetworkIcon-ARK-ark.devnet"
                          >
                            <div
                              class="sc-bdfBwQ iyevwF"
                              data-testid="NetworkIcon__icon"
                              height="20"
                              width="20"
                            >
                              <svg>
                                ark.svg
                              </svg>
                            </div>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="flex-auto mr-2 text-base font-semibold max-w-24 truncate text-theme-text"
                            data-testid="address__wallet-name"
                          >
                            <span
                              class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                              data-testid="TruncateEnd"
                            >
                              Sample Wallet
                            </span>
                          </span>
                          <span
                            class="text-base font-semibold TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate"
                            data-testid="address__wallet-address"
                          >
                            D8rr7B…s6YUYD
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="justify-end font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
                      >
                        <span
                          data-testid="Amount"
                        >
                          33.75089801 DARK
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 cnmhFM"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="SearchWalletListItem__select-0"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="space-x-4 TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 gMOims"
                      >
                        <div
                          class="-space-x-2"
                        >
                          <div
                            aria-label="ARK Devnet"
                            class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
                            data-testid="NetworkIcon-ARK-ark.devnet"
                          >
                            <div
                              class="sc-bdfBwQ iyevwF"
                              data-testid="NetworkIcon__icon"
                              height="20"
                              width="20"
                            >
                              <svg>
                                ark.svg
                              </svg>
                            </div>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                                title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="flex-auto mr-2 text-base font-semibold max-w-24 truncate text-theme-text"
                            data-testid="address__wallet-name"
                          >
                            <span
                              class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                              data-testid="TruncateEnd"
                            >
                              ARK Wallet 2
                            </span>
                          </span>
                          <span
                            class="text-base font-semibold TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate"
                            data-testid="address__wallet-address"
                          >
                            D5sRKW…cvJtwb
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="justify-end font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
                      >
                        <span
                          data-testid="Amount"
                        >
                          57.68 DARK
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 cnmhFM"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="SearchWalletListItem__select-1"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchWallet uses fiat value = true should render 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="flex overflow-hidden absolute right-0 left-0 z-50 flex-col p-10 mx-auto rounded-xl shadow-2xl Modal__ModalContainer-sc-1pv7yg7-0 NWPmM bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="w-11 h-11 Button__StyledButton-mdtvtf-0 fHYGyx"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Select Account
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            Find and select the account you want to receive funds to
          </div>
          <div
            class="mt-8"
          >
            <div
              class="-mt-3 Table__TableWrapper-sc-84pst5-0 ccYCKK"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                    role="row"
                  >
                    <th
                      class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 hasBorder "
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex align-top flex-inline "
                      >
                        <div>
                          Wallet Address
                        </div>
                        <div
                          class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          <div
                            class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 hasBorder "
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-row-reverse justify-end align-top flex-inline"
                      >
                        <div>
                          Balance
                        </div>
                        <div
                          class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          <div
                            class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 hasBorder "
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-row-reverse justify-end align-top flex-inline"
                      >
                        <div>
                          Fiat Value
                        </div>
                        <div
                          class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          <div
                            class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 "
                      colspan="1"
                      data-testid="table__th--3"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-row-reverse justify-end align-top flex-inline no-border"
                      >
                        <div>
                          <div
                            class="relative"
                          >
                            <button
                              class="my-auto h-full font-semibold cursor-pointer focus:outline-none"
                              data-testid="header-search-bar__button"
                            >
                              <div
                                class="flex items-center space-x-3"
                              >
                                <span
                                  class="text-theme-primary-300 dark:text-theme-secondary-700"
                                >
                                  Search
                                </span>
                                <div
                                  class="sc-bdfBwQ iNulIV text-theme-primary-300 dark:text-theme-secondary-600"
                                  height="18"
                                  width="18"
                                >
                                  <svg>
                                    search.svg
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="space-x-4 TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 gMOims"
                      >
                        <div
                          class="-space-x-2"
                        >
                          <div
                            aria-label="ARK Devnet"
                            class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
                            data-testid="NetworkIcon-ARK-ark.devnet"
                          >
                            <div
                              class="sc-bdfBwQ iyevwF"
                              data-testid="NetworkIcon__icon"
                              height="20"
                              width="20"
                            >
                              <svg>
                                ark.svg
                              </svg>
                            </div>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="flex-auto mr-2 text-base font-semibold max-w-24 truncate text-theme-text"
                            data-testid="address__wallet-name"
                          >
                            <span
                              class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                              data-testid="TruncateEnd"
                            >
                              Sample Wallet
                            </span>
                          </span>
                          <span
                            class="text-base font-semibold TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate"
                            data-testid="address__wallet-address"
                          >
                            D8rr7B…s6YUYD
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="justify-end font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
                      >
                        <span
                          data-testid="Amount"
                        >
                          33.75089801 DARK
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm text-theme-secondary-400"
                      >
                        <span
                          data-testid="Amount"
                        >
                          0 BTC
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 cnmhFM"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="SearchWalletListItem__select-0"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="space-x-4 TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 gMOims"
                      >
                        <div
                          class="-space-x-2"
                        >
                          <div
                            aria-label="ARK Devnet"
                            class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
                            data-testid="NetworkIcon-ARK-ark.devnet"
                          >
                            <div
                              class="sc-bdfBwQ iyevwF"
                              data-testid="NetworkIcon__icon"
                              height="20"
                              width="20"
                            >
                              <svg>
                                ark.svg
                              </svg>
                            </div>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                                title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="flex-auto mr-2 text-base font-semibold max-w-24 truncate text-theme-text"
                            data-testid="address__wallet-name"
                          >
                            <span
                              class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                              data-testid="TruncateEnd"
                            >
                              ARK Wallet 2
                            </span>
                          </span>
                          <span
                            class="text-base font-semibold TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate"
                            data-testid="address__wallet-address"
                          >
                            D5sRKW…cvJtwb
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="justify-end font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
                      >
                        <span
                          data-testid="Amount"
                        >
                          57.68 DARK
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm text-theme-secondary-400"
                      >
                        <span
                          data-testid="Amount"
                        >
                          0 BTC
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 cnmhFM"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="SearchWalletListItem__select-1"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchWallet uses fiat value = true should render with BTC as the default exchange currency 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 justify-center items-center w-full h-full overflow-overlay"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="flex overflow-hidden absolute right-0 left-0 z-50 flex-col p-10 mx-auto rounded-xl shadow-2xl Modal__ModalContainer-sc-1pv7yg7-0 NWPmM bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
      >
        <button
          class="w-11 h-11 Button__StyledButton-mdtvtf-0 fHYGyx"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="flex relative items-center space-x-2"
          >
            <div
              class="sc-bdfBwQ bfBhNR"
              height="14"
              width="14"
            >
              <svg>
                cross-slim.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Select Account
        </h2>
        <div
          class="flex-1"
        >
          <div
            class="mt-1 text-theme-secondary-text"
          >
            Find and select the account you want to receive funds to
          </div>
          <div
            class="mt-8"
          >
            <div
              class="-mt-3 Table__TableWrapper-sc-84pst5-0 ccYCKK"
              role="table"
            >
              <table
                cellpadding="0"
                class="table-auto"
              >
                <thead>
                  <tr
                    class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                    role="row"
                  >
                    <th
                      class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 hasBorder "
                      colspan="1"
                      data-testid="table__th--0"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex align-top flex-inline "
                      >
                        <div>
                          Wallet Address
                        </div>
                        <div
                          class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          <div
                            class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 hasBorder "
                      colspan="1"
                      data-testid="table__th--1"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-row-reverse justify-end align-top flex-inline"
                      >
                        <div>
                          Balance
                        </div>
                        <div
                          class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          <div
                            class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 hasBorder "
                      colspan="1"
                      data-testid="table__th--2"
                      role="columnheader"
                      style="cursor: pointer;"
                      title="Toggle SortBy"
                    >
                      <div
                        class="flex flex-row-reverse justify-end align-top flex-inline"
                      >
                        <div>
                          Fiat Value
                        </div>
                        <div
                          class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
                        >
                          <div
                            class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                            height="5"
                            role="img"
                            width="8"
                          >
                            <svg>
                              chevron-down.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </th>
                    <th
                      class="relative p-3 m-0 text-sm font-semibold text-left select-none group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 first:pl-0 last:pr-0 "
                      colspan="1"
                      data-testid="table__th--3"
                      role="columnheader"
                    >
                      <div
                        class="flex flex-row-reverse justify-end align-top flex-inline no-border"
                      >
                        <div>
                          <div
                            class="relative"
                          >
                            <button
                              class="my-auto h-full font-semibold cursor-pointer focus:outline-none"
                              data-testid="header-search-bar__button"
                            >
                              <div
                                class="flex items-center space-x-3"
                              >
                                <span
                                  class="text-theme-primary-300 dark:text-theme-secondary-700"
                                >
                                  Search
                                </span>
                                <div
                                  class="sc-bdfBwQ iNulIV text-theme-primary-300 dark:text-theme-secondary-600"
                                  height="18"
                                  width="18"
                                >
                                  <svg>
                                    search.svg
                                  </svg>
                                </div>
                              </div>
                            </button>
                          </div>
                        </div>
                      </div>
                    </th>
                  </tr>
                </thead>
                <tbody
                  role="rowgroup"
                >
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="space-x-4 TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 gMOims"
                      >
                        <div
                          class="-space-x-2"
                        >
                          <div
                            aria-label="ARK Devnet"
                            class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
                            data-testid="NetworkIcon-ARK-ark.devnet"
                          >
                            <div
                              class="sc-bdfBwQ iyevwF"
                              data-testid="NetworkIcon__icon"
                              height="20"
                              width="20"
                            >
                              <svg>
                                ark.svg
                              </svg>
                            </div>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="flex-auto mr-2 text-base font-semibold max-w-24 truncate text-theme-text"
                            data-testid="address__wallet-name"
                          >
                            <span
                              class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                              data-testid="TruncateEnd"
                            >
                              Sample Wallet
                            </span>
                          </span>
                          <span
                            class="text-base font-semibold TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate"
                            data-testid="address__wallet-address"
                          >
                            D8rr7B…s6YUYD
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="justify-end font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
                      >
                        <span
                          data-testid="Amount"
                        >
                          33.75089801 DARK
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm text-theme-secondary-400"
                      >
                        <span
                          data-testid="Amount"
                        >
                          0 BTC
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 cnmhFM"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="SearchWalletListItem__select-0"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
                    data-testid="TableRow"
                  >
                    <td>
                      <div
                        class="space-x-4 TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 gMOims"
                      >
                        <div
                          class="-space-x-2"
                        >
                          <div
                            aria-label="ARK Devnet"
                            class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
                            data-testid="NetworkIcon-ARK-ark.devnet"
                          >
                            <div
                              class="sc-bdfBwQ iyevwF"
                              data-testid="NetworkIcon__icon"
                              height="20"
                              width="20"
                            >
                              <svg>
                                ark.svg
                              </svg>
                            </div>
                          </div>
                          <div
                            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                            data-testid="Avatar"
                          >
                            <div
                              class="w-full h-full"
                            >
                              <img
                                alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                                title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="inline-flex items-center no-ligatures"
                        >
                          <span
                            class="flex-auto mr-2 text-base font-semibold max-w-24 truncate text-theme-text"
                            data-testid="address__wallet-name"
                          >
                            <span
                              class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                              data-testid="TruncateEnd"
                            >
                              ARK Wallet 2
                            </span>
                          </span>
                          <span
                            class="text-base font-semibold TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate"
                            data-testid="address__wallet-address"
                          >
                            D5sRKW…cvJtwb
                          </span>
                        </div>
                      </div>
                    </td>
                    <td>
                      <div
                        class="justify-end font-semibold TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm"
                      >
                        <span
                          data-testid="Amount"
                        >
                          57.68 DARK
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 knQiUm text-theme-secondary-400"
                      >
                        <span
                          data-testid="Amount"
                        >
                          0 BTC
                        </span>
                      </div>
                    </td>
                    <td>
                      <div
                        class="justify-end TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 cnmhFM"
                      >
                        <button
                          class="Button__StyledButton-mdtvtf-0 iUSBMV"
                          data-testid="SearchWalletListItem__select-1"
                          type="button"
                        >
                          <div
                            class="flex relative items-center space-x-2"
                          >
                            Select
                          </div>
                        </button>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
